changed  h2 element name Wim van der Linden

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     </style>
 </head>
 <body>
-    
+
     <section id="docenten">
         <article id="maker">
             <img>
             <h2 class="naam">Docent</h2>
         </article>
     </section>
-    
+
     <section id="studenten">
         <article id="">
             <img>
@@ -83,7 +83,7 @@
         </article>
         <article id="s88454">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="naam"> Wim van der Linden </h2>
         </article>
         <article id="s6012799">
             <img>
