--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="docenten">
         <article id="maker">
             <img>
-            <h2 class="naam">Docent</h2>
+            <h2 class="naam">Marcel Akerboom</h2>
         </article>
     </section>
     
