naam van leerling mick toegevoegd

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </article>
         <article id="s6007221">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="Mick Labree"></h2>
         </article>
         <article id="s88454">
             <img>
