Mijn naam toegevoegd

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </article>
         <article id="s6015473">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="naam">Yash Anand</h2>
         </article>
         <article id="s6015534">
             <img>
