--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </article>
         <article id="s6014077">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="Liam Schultz"></h2>
         </article>
         <article id="s1041361">
             <img>
