--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </article>
         <article id="s6003004">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="naam">Max Beck</h2>
         </article>
         <article id="s6010924">
             <img>
