Naam Marieke toegevoegd

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </article>
         <article id="s6010946">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="naam">Marieke</h2>
         </article>
         <article id="s6012541">
             <img>
