--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </article>
         <article id="s6004053">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="naam">Shiva</h2>
         </article>
         <article id="s6012590">
             <img>
