--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </article>
         <article id="s6013669">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="Olivier Oostermann"></h2>
         </article>
         <article id="s6013771">
             <img>
