Aymane Oucharia heeft zijn naam in H2 gezet in plaats van class

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </article>
         <article id="s6013771">
             <img>
-            <h2 class="Aymane Oucharia"></h2>
+            <h2 class="naam">Aymane Oucharia</h2>
         </article>
         <article id="s6014729">
             <img>
