--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <section id="docenten">
         <article id="maker">
-            <img>
+            <img src="image/rami.png">
             <h2 class="naam">Marcel Akerboom</h2>
         </article>
     </section>
