Naam van leerling goed gezet en foto toegevoegd

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </article>
         <article id="s6012203">
             <img>
-            <h2 class="Marco Eitens"></h2>
+            <h2 class="naam">Marco Eitens</h2>
         </article>
         <article id="s1047240">
             <img>
