naam Rami toegevoegd

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="studenten">
         <article id="">
             <img>
-            <h2 class="naam Rami Almuhana"></h2>
+            <h2 class="naam">Rami Almuhana</h2>
         </article>
         <article id="s1040117">
             <img>
