--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     
     <section id="docenten">
         <article id="maker">
-            <img src="img/maker.jpg">
-            <h2 class="naam">Marcel Akerboom</h2>
+            <img>
+            <h2 class="naam">Docent</h2>
         </article>
     </section>
     
     <section id="studenten">
         <article id="">
             <img>
-            <h2 class="naam Rami Almuhana"></h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s1040117">
             <img>
@@ -31,7 +31,7 @@
         </article>
         <article id="s6015473">
             <img>
-            <h2 class="naam">Yash Anand</h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s6015534">
             <img>
@@ -39,7 +39,7 @@
         </article>
         <article id="s6003004">
             <img>
-            <h2 class="naam">Max Beck</h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s6010924">
             <img>
@@ -47,7 +47,7 @@
         </article>
         <article id="s6012203">
             <img>
-            <h2 class="Marco Eitens"></h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s1047240">
             <img>
@@ -67,7 +67,7 @@
         </article>
         <article id="s6012202">
             <img>
-            <h2 class="naam">Sander</h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s6003780">
             <img>
@@ -103,11 +103,11 @@
         </article>
         <article id="s6013669">
             <img>
-            <h2 class="Olivier Oostermann"></h2>
+            <h2 class="naam">Olivier Oostermann</h2>
         </article>
         <article id="s6013771">
             <img>
-            <h2 class="naam">Aymane Oucharia</h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s6014729">
             <img>
@@ -115,7 +115,7 @@
         </article>
         <article id="s6004053">
             <img>
-            <h2 class="naam">Shiva</h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s6012590">
             <img>
@@ -131,7 +131,7 @@
         </article>
         <article id="s6014077">
             <img>
-            <h2 class="Liam Schultz"></h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s1041361">
             <img>
