Aymane Oucharia heeft een afbeelding toegevoegd

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h2 class="Olivier Oostermann"></h2>
         </article>
         <article id="s6013771">
-            <img>
+            <img src="img/FGP-53089.png">
             <h2 class="naam">Aymane Oucharia</h2>
         </article>
         <article id="s6014729">
