--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s6012202">
-            <img>
+            <img src="img2/foto leraar">
             <h2 class="naam">Sander</h2>
         </article>
         <article id="s6003780">
