Afbeelding Max Beck toegevoegd

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s6003004">
-            <img>
+            <img src="img/download.png" alt="Foto Leerling">
             <h2 class="naam">Max Beck</h2>
         </article>
         <article id="s6010924">
