--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     
     <section id="studenten">
         <article id="">
-            <img src="img/rami.png">
-            <h2 class="naam">Rami Almuhana</h2>
+            <img>
+            <h2 class="naam"></h2>
         </article>
         <article id="s1040117">
             <img>
@@ -38,8 +38,8 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s6003004">
-            <img src="img/download.png" alt="Foto Leerling">
-            <h2 class="naam">Max Beck</h2>
+            <img>
+            <h2 class="naam"></h2>
         </article>
         <article id="s6010924">
             <img>
@@ -66,8 +66,8 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s6012202">
-            <img src="img2/foto leraar">
-            <h2 class="naam">Sander</h2>
+            <img>
+            <h2 class="naam"></h2>
         </article>
         <article id="s6003780">
             <img>
@@ -79,7 +79,7 @@
         </article>
         <article id="s6007221">
             <img>
-            <h2 class="naam">Mick Labree</h2>
+            <h2 class="naam"></h2>
         </article>
         <article id="s88454">
             <img>
@@ -122,7 +122,7 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s6010946">
-            <img>
+            <img src="img/marieke.PNG">
             <h2 class="naam">Marieke</h2>
         </article>
         <article id="s6012541">
