naam leerling toegevoegd

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,15 +12,16 @@
         }
     </style>
 </head>
+
 <body>
-    
+
     <section id="docenten">
         <article id="maker">
             <img>
             <h2 class="naam">Docent</h2>
         </article>
     </section>
-    
+
     <section id="studenten">
         <article id="">
             <img>
@@ -147,8 +149,9 @@
         </article>
         <article id="s6012752">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="naam">Hanin Suwaid</h2>
         </article>
     </section>
 </body>
+
 </html>
