--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s1038364">
-            <img>
+            <img src="img\unnamed.jpg">
             <h2 class="Sathyam Mohan"></h2>
         </article>
         <article id="s6002995">
