foto teacher toegevoegd

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s6015473">
-            <img>
+            <img src="Img/Teacher.jpg">
             <h2 class="naam">Yash Anand</h2>
         </article>
         <article id="s6015534">
