Naam toegevoegd aan s128739: Erwin Kuiper

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </article>
         <article id="s128739">
             <img>
-            <h2 class="naam"></h2>
+            <h2 class="naam">Erwin Kuiper</h2>
         </article>
         <article id="s6007221">
             <img>
