Foto toegevoegd bij Erwin Kuiper

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s128739">
-            <img>
+            <img src="img/AstonMartinDBS.jpg">
             <h2 class="naam">Erwin Kuiper</h2>
         </article>
         <article id="s6007221">
