--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2 class="naam"></h2>
         </article>
         <article id="s6007221">
-            <img>
+            <img src="img/Screenshot 2020-12-04 at 10.44.57.png">
             <h2 class="naam">Mick Labree</h2>
         </article>
         <article id="s88454">
