foto goed gezet mick

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2 class="naam">Erwin Kuiper</h2>
         </article>
         <article id="s6007221">
-            <img src="img/Screenshot 2020-12-04 at 10.44.57.png">
+            <img src="img/Mick.png">
             <h2 class="naam">Mick Labree</h2>
         </article>
         <article id="s88454">
